# ascii-rat

./: .gitignore  Cargo.toml  README.md  demo.yaml  format.md  instructions.md  keys.md  test.yaml
ascii-rat-bard/: Cargo.toml
ascii-rat-bard/src/: main.rs
ascii-rat-scribe/: Cargo.toml
ascii-rat-scribe/src/: capture.rs  decoder.rs  emit.rs  main.rs
ascii-rat-stage/: Cargo.toml  demo.yaml
ascii-rat-stage/examples/: verify_sudo.rs
ascii-rat-stage/src/: cast.rs  filters.rs  lib.rs  pty.rs  script.rs  util.rs
ascii-rat-stage/tests/: pipeline.rs
examples/: README.md  demo-ception.yaml  hello-world.yaml  inner-demo.yaml  level0.cmds  level1.yaml  level2.yaml  scribe-records-htop.yaml  sudo-command.yaml
