[workspace]
resolver = "2"
members = [
    "ascii-rat-stage",
    "ascii-rat-bard",
    "ascii-rat-scribe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.8"
rand = "0.8"
regex = "1"
anyhow = "1"
thiserror = "1"
rpassword = "7"
crossterm = "0.27"
