[workspace]
resolver = "2"
members = [
    "ascii-rat-stage",
    "ascii-rat-bard",
    "ascii-rat-scribe",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.9"
rand = "0.10.2"
regex = "1"
anyhow = "1"
thiserror = "2"
rpassword = "7"
crossterm = "0.29"
